@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/scryptenc-wasm-v0.1.1\...HEAD[Unreleased]
+
+=== Added
+
+* Add examples ({pull-request-url}/141[#141])
+
 == {compare-url}/scryptenc-wasm-v0.1.0\...scryptenc-wasm-v0.1.1[0.1.1] - 2024-01-25
 
 === Fixed
